<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.usi.shd1_tools.scan_stress.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleLoopTimes"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/intLoop"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="50000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="times"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtDecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDecode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/lblEnableDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="        " />

            <TextView
                android:id="@+id/txtInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleInterval"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/intInterval"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:ems="10"
                android:inputType="number"
                android:text="500"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewMs2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="ms"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="        " />

            <TextView
                android:id="@+id/txtTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="@string/titleTimeout"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/intTimeout"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:ems="10"
                android:inputType="number"
                android:text="400"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewMs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:text="ms"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="        " />

        <CheckBox
            android:id="@+id/chkEnableDisable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chkEnableDisableEachScan" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnStart"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.59"
            android:text="@string/titleBtnStart" />

        <Button
            android:id="@+id/btnTestActivity"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Debug"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnTestScan"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleBtnTestScan"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnEnable"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enable"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnDisable"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disable"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/titlePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlePass" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultPass" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/titleFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleFail" />

        <TextView
            android:id="@+id/txtFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultFail" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="    "
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/titleND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleND" />

        <TextView
            android:id="@+id/txtND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorResultND" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="        "
            android:textColor="@color/colorResultND" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/txtProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Executed / Total" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtDecodeResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:editable="false"
        android:ems="10"
        android:inputType="textMultiLine"
        android:password="false"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        android:singleLine="false" />

</LinearLayout>